Revision history for Perl extension CGI::Header.

  - Add tests for CGI::Header#clone

0.51 (1.00-RC4) May 13th, 2013

  - Add CGI::Header::Standalone that doesn't depend on CGI.pm's
    header() method
  - Add clone() method to CGI::Header

0.50 (1.00-RC3) Apr 23rd, 2013

  - Tests don't depend on Test::Exception (Thanks to CPAN testers)

0.49 (RC-1.00) Apr 22nd, 2013

  - Remove rehash(). new() normalizes property names automatically.

0.48 (RC-1.00) Apr 20th, 2013

  - Add EXAMPLES to POD
  - Add tests for EXAMPLES
  - Tests require CGI::Simple
  - Release candidate for CGI::Header 1.00 (RC-1.00)

0.47  Apr 12th, 2013

  - Remove handler() and add redirect() instead
  - Rename cookie() to cookies() since the "cookie" property can be an
    arrayref
  - Remove push_cookie(). It's up to you to decide how to manage HTTP cookies.
    For example, Plack::Response#cookies behaves like HASH. On the other
    hand, Mojo::Message::Response#cookies behaves like ARRAY.

0.46  Apr 11th, 2013

  - Remove CGI::Header::PSGI from this distribution. Sorry for confusing
    changes.
  - Simplify cookie() and p3p()
  - push_cookie() creates CGI::Cookie object automatically

0.45  Apr 10th, 2013

  - Add CGI::Header::PSGI to this distribution and rewrite the module
    entirely.

  [INCOMPATIBLE CHANGES]

    - Rewrite test suite entirely
    - Remove flatten() and as_hashref() from CGI::Header

0.44  Apr 9th, 2013

  [INCOMPATIBLE CHANGES]

    - Revise new() entirely

0.43  Apr 8th, 2013

   [INCOMPATIBLE CHANGES]

    - Remove dispatch tables used by set() and delete()
    - Remove tie() interface

0.42  Apr 8th, 2013

  - Add handler() attribute which defaults to 'header'.
    If handler() is set to 'redirect', as_string() will invoke:

        $h->query->redirect( $h->header )

  [INCOMPATIBLE CHANGES]

    - Remove CGI::Header::Redirect and t/31_cgi_redirect.t
    - Remove t/32_nph_pragma.t
    - Remove push_p3p()

0.41  Apr 8th, 2013
